--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: orange;
+  background-color: #FB7306;
   color: white;
   padding: 15px 30px;
 }
@@ -51,13 +51,15 @@ body {
 }
 
 .cart img {
-  width: 30px;
-  height: 30px;
+  margin-top: 7px;
+  width: 38px;
+  height: 38px;
   cursor: pointer;
 }
 
 .mobile-menu-toggle {
-  font-size: 24px;
+  font-size: 35px;
+  padding-bottom: 5px;
   cursor: pointer;
   display: none;
 }
@@ -76,7 +78,7 @@ body {
 .mobile-menu {
   display: flex;
   flex-direction: column;
-  background-color: orange;
+  background-color: #FB7306;
   color: white;
   position: fixed;
   top: 0;
@@ -108,13 +110,15 @@ body {
 }
 
 .order-now button {
-  background-color: #ffcc00;
+  background-color: #FFDE59;
   color: #333;
   border: none;
-  padding: 10px 20px;
+  padding: 15px 30px;
+  font-weight: 700;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  border-radius: 6px;
 }
 
 .order-now button:hover {
@@ -149,7 +153,7 @@ body {
 
   .mobile-menu.show {
     left: 0;
-    width: 60%;
+    width: 70%;
   }
 }
 
