--- a/pages/restaurantsNearMe.css
+++ b/pages/restaurantsNearMe.css
@@ -8,15 +8,20 @@ body {
 /* NAV BAR STYLE */
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   background-color: #FB7306;
   color: white;
-  padding: 15px 30px;
+  padding: 15px 0px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
 }
 
 .logo img {
   width: 120px;
+  padding-left: 25px;
 }
 
 .menu {
@@ -51,6 +56,7 @@ body {
 .mobile-menu-toggle {
   font-size: 35px;
   padding-bottom: 5px;
+  padding-right: 30px;
   cursor: pointer;
   display: none;
 }
@@ -97,6 +103,7 @@ body {
 }
 
 .order-now {
+  padding-right: 25px;
   order: 3;
 }
 
@@ -111,6 +118,7 @@ body {
   transition: background-color 0.3s ease;
   border-radius: 6px;
 }
+
 
 
 .order-now button:hover {
