--- a/styles.css
+++ b/styles.css
@@ -151,3 +151,34 @@ body {
 
 
 /* NAV BAR ENDS */
+
+
+
+
+
+
+.branding-container {
+  position: relative;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+  
+}
+
+.branding-image {
+  width: 50px;
+  height: auto;
+  margin: 0 5px;
+  z-index: 1;
+  transition: transform 0.3s ease-in-out;
+}
+
+
+
+.center-logo {
+  width: 80px;
+  height: auto;
+  z-index: 1;
+}
