--- a/pages/main-page.css
+++ b/pages/main-page.css
@@ -429,9 +429,61 @@ body {
 }
 
 /* Closed Restaurant Style */
-.closed {
-  color: #ff0000; /* Red color for closed restaurants */
+
+#popup-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
 }
+
+
+#popup-content {
+  
+  background: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 400px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+}
+
+#close-button {
+  background-color: transparent;
+  color: #000;
+  border: none;
+  font-size: 20px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+#app-icons {
+  margin-top: 0px;
+}
+
+#app-icons img {
+  width: 150px;
+  margin: 2px;
+}
+
+#continue-link {
+  display: block;
+  margin-top: 20px;
+  color: #333;
+  text-decoration: underline;
+}
+
+
+
 
 
 
