--- a/pages/main-page.css
+++ b/pages/main-page.css
@@ -449,10 +449,11 @@ body {
 
 @media only screen and (max-width: 767px) {
   .restaurantCard {
-    width: 100% /* Adjusted the width to 100% */
+    width: 100%; /* Adjusted the width to 100% */
     height: 182px;
   }
 }
+
 
 /* Restaurant Image */
 .restaurantImage {
