--- a/pages/main-page.css
+++ b/pages/main-page.css
@@ -447,7 +447,7 @@ body {
 }
 
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 812px) and (-webkit-min-device-pixel-ratio: 3), (max-width: 375px) and (-webkit-min-device-pixel-ratio: 2) {
   .restaurantCard {
     width: 172px; /* Adjusted the width to 100% */
     height: 182px;
