--- a/pages/main-page.css
+++ b/pages/main-page.css
@@ -447,9 +447,26 @@ body {
 }
 
 
-@media only screen and (max-width: 812px) and (-webkit-min-device-pixel-ratio: 3), (max-width: 375px) and (-webkit-min-device-pixel-ratio: 2) {
+
+@media only screen and (max-width: 430px) {
   .restaurantCard {
-    width: 172px; /* Adjusted the width to 100% */
+    width: 175px; /* Adjusted the width to 100% */
+    height: 192px;
+  }
+}
+
+
+@media only screen and (max-width: 414px) {
+  .restaurantCard {
+    width: 182px; /* Adjusted the width to 100% */
+    height: 192px;
+  }
+}
+
+
+@media only screen and (max-width: 390px) {
+  .restaurantCard {
+    width: 100px; /* Adjusted the width to 100% */
     height: 182px;
   }
 }
