--- a/menu/uplifted-bistro-menu.css
+++ b/menu/uplifted-bistro-menu.css
@@ -364,22 +364,26 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+    background: rgba(0, 0, 0, 0.5);
     display: none;
     justify-content: center;
     align-items: center;
     z-index: 999;
-  }
+}
 
-  .popup-content {
+.popup-content {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     max-width: 300px;
     width: 100%;
-    position: relative;
-  }
+    position: absolute;
+    max-height: 80vh; /* Ajusta según sea necesario */
+    overflow-y: auto;
+    margin: 10% auto; /* Ajusta la posición vertical del pop-up */
+}
+
 
   /* Close button */
   .close-btn {
@@ -477,3 +481,10 @@ body {
     padding: 5px;
     margin-top: 5px;
   }
+
+
+  /* Selected styles */
+.topping-rectangle.selected {
+  background-color: yellow;
+  color: black;
+}
