--- a/menu/uplifted-bistro-menu.css
+++ b/menu/uplifted-bistro-menu.css
@@ -441,7 +441,7 @@ to {
     font-weight: bold;
     text-align: center;
     color: #fff; /* White color for the name */
-    background-color: #ff8800; /* Orange background for the name */
+    background-color:  #FB7306; /* Orange background for the name */
     padding: 2px;
     margin: 0px 40px;
   }
@@ -591,6 +591,7 @@ to {
     flex-direction: column;
     justify-content: center;
     border: 1px solid #ccc;
+    text-align: center;
     border-radius: 8px;
     padding: 15px;
     margin: 5px;
@@ -599,7 +600,7 @@ to {
 
   .topping-price-box {
     text-align: center;
-    background-color: orange;
+    background-color:  #FB7306;
     color: white;
     border-radius: 8px;
     padding: 5px;
@@ -609,7 +610,7 @@ to {
 
   /* Selected styles */
 .topping-rectangle.selected {
-  background-color: yellow;
+  background-color: #E3CA45;
   color: black;
 }
 
@@ -627,7 +628,7 @@ label {
 
 textarea {
   width: 100%;
-  padding: 8px;
+  padding: 15px 0px;
   border: 1px solid #ccc;
   border-radius: 4px;
   resize: vertical;
@@ -673,10 +674,10 @@ textarea {
 
 button {
   font-size: 22px;
-  background-color: orange;
+  background-color:  #FB7306;
   color: white;
   padding: 10px 75px;
-  border: 2px solid yellow;
+  border: 2px solid #FCEF7C;
   border-radius: 10px;
   cursor: pointer;
   margin-top: 10px;
