--- a/menu/uplifted-bistro-menu.css
+++ b/menu/uplifted-bistro-menu.css
@@ -510,12 +510,30 @@ to {
 
   /* Close button */
   .close-btn {
-    position: absolute;
+    position: fixed;
+    right: 12px;
     top: 10px;
-    right: 10px;
+    z-index: 1000;
+    font-size: 30px;
+    color: #000;
     cursor: pointer;
-    font-size: 28px;
+    background: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+    padding: 10px 20px;
+    border-radius: 50%; /* Makes it round */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Adds a subtle shadow */
+}
+
+
+@media only screen and (max-width: 768px) {
+  .close-btn {
+    display: flex;
+    right: 10px;
+    top: 10px;   
+    }
   }
+
+
+
 
   /* Styles for the food box */
   .food-box {
