--- a/menu/uplifted-bistro-menu.css
+++ b/menu/uplifted-bistro-menu.css
@@ -733,45 +733,45 @@ button {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.carousel-container {
+  position: relative;
+  width: fit-content; /* Adjust as needed */
+  margin: 0 auto; /* Center the carousel */
+}
 
 .carousel-inner {
+  position: relative;
   display: flex;
-  transition: transform 0.5s ease;
+  align-items: center;
+  justify-content: center;
 }
 
-.carousel-inner img {
-  width: 100%;
-  height: auto;
-}
-
-
-.prev {
+.bottom-controls {
+  position: absolute;
+  bottom: 0;
   left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.next {
-  right: 0;
+.control-button {
+  color: #fff;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.fullscreen-button {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  color: #fff;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
 }
