--- a/menu/uplifted-bistro-order-page/uplifted-bistro-menu.css
+++ b/menu/uplifted-bistro-order-page/uplifted-bistro-menu.css
@@ -733,45 +733,44 @@ button {
 
 
 
-.carousel-container {
-  position: relative;
-  width: fit-content; /* Adjust as needed */
-  margin: 0 auto; /* Center the carousel */
-}
 
-.carousel-inner {
-  position: relative;
+#mainImageContainer {
+  width: 100%; /* Ancho fijo del contenedor */
+  height: 300px; /* Altura fija del contenedor */
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+ 
+  overflow: hidden; /* Oculta partes de las imágenes que excedan los límites del contenedor */
 }
 
-.bottom-controls {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+#mainImage {
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* Ajusta la imagen dentro del contenedor sin deformarse ni recortarse */
+}
+
+.thumbnails {
   display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  margin-top: 10px;
 }
 
-.control-button {
-  color: #fff;
-  background-color: transparent;
-  border: none;
+.thumbnail {
+  margin: 0 5px;
   cursor: pointer;
-  font-size: 18px;
 }
 
-.fullscreen-button {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  color: #fff;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 18px;
+.thumbnail img {
+  max-width: 100px;
+  max-height: 100px; /* Limita el tamaño máximo de las miniaturas */
+  width: 100px; /* Ancho automático para mantener la proporción */
+  height: 100px; /* Altura automática para mantener la proporción */
+  border: 2px solid transparent;
+  transition: border-color 0.3s ease;
+}
+
+.thumbnail img:hover {
+  border-color: #007bff;
 }
