--- a/menu/uplifted-bistro-order-page/uplifted-bistro-menu.css
+++ b/menu/uplifted-bistro-order-page/uplifted-bistro-menu.css
@@ -528,7 +528,7 @@ body {
   padding: 5px;
   border-radius: 8px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  max-width: 60%;
+  max-width: 50%;
   width: 100%;
   position: absolute;
   max-height: 92vh;
@@ -592,7 +592,7 @@ body {
 
 
 
-.itemName {
+.itemName { 
   position: relative;
   width: 100%;
   display: flex;
@@ -609,15 +609,15 @@ body {
 }
 
 .itemNames { 
+  margin-top: 12px;
   width: 100%;
   border-radius: 10px;
   padding: 5px 0px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
 }
 
 .itemDescription {
   color: #a1a1a1;
-  font-size: 16px;
   margin: 0px 50px;
 }
 
@@ -626,29 +626,7 @@ body {
   border-bottom: 2px solid rgba(0, 0, 0, 0.1); /* Línea divisoria semitransparente en la parte inferior */
   padding-top: 25px; /* Espacio opcional para separar la línea superior del texto */
   padding-bottom: 25px; /* Espacio opcional para separar la línea inferior del texto */
-}
-
-
-/* Styles for the meat selection */
-.meat-selection {
-  margin: 0px 5px;
-  margin-top: 10px;
-  font-size: 16px;
-}
-
-.meat-rectangle {
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 10px;
-  margin-bottom: 10px;
-}
-
-.meat-text-orange {
-  font-size: 16px;
-  font-weight: bold;
-  color: orange;
+  font-size: 19px;
 }
 
 .food-price {
@@ -656,89 +634,109 @@ body {
   font-weight: bold;
 }
 
-.meat-text-blue {
-  color: blue;
-}
 
-/* Styles for the bacon and sausage options */
-.topping-options {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.toppings {
-  display: flex;
-  justify-content: center;
-}
-
-.topping-rectangle {
-  flex: 1;
+.delivery-simulator {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  border: 1px solid #ccc;
-  text-align: center;
-  border-radius: 8px;
-  padding: 15px 5px;
-  margin: 5px;
+  align-items: center;
+  margin-top: 18px; /* Espacio en la parte superior */
+  margin-bottom: 15px;
+}
+
+.selection-section {
+  width: 89%;
+  padding: 20px;
+  margin-bottom: 18px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+}
+
+
+.required-text {
+  font-size: 14px;
+  color: #555;
+  margin-left: 10px; /* Espacio adicional a la izquierda */
+}
+
+
+/* Estilo para el contenedor del título y el texto "Required" */
+.title-container {
+  font-weight: bold;
+  font-size: 20px;
+  display: flex;
+  justify-content: center; /* Centrar horizontalmente */
+  align-items: center; /* Centrar verticalmente */
+}
+
+.required-text {
+  position: absolute; /* Para utilizar la posición absoluta */
+  font-size: 15px;
+  color: #69a9ca;
+  right: 6%; /* Posicionar a la derecha */
+  background-color: #daf3ff;
+  padding: 2px 3px;
+}
+
+@media screen and (max-width: 768px) {
+  .title-container {
+      flex-direction: column;
+      align-items: center; /* Centrar horizontalmente */
+      text-align: center; /* Centrar el texto */
+  }
+
+  .required-text {
+      position: static;
+      margin-top: 5px;
+      margin-left: auto; /* Centrar el texto a la derecha */
+      margin-right: auto; /* Centrar el texto a la izquierda */
+  }
+}
+
+.selection-title {
+  margin-bottom: 15px;
+}
+
+/* Estilo para el título de la sección */
+.section-title {
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+  text-align: center; /* Centrar el texto */
+}
+
+
+
+.selection-options {
+  display: flex;
+  flex-direction: column;
+}
+
+.option {
+  display: flex;
+  box-shadow: 0 0 4px rgba(109, 109, 109, 0.4);
+  justify-content: space-between;
+  align-items: center; /* Alineación vertical centrada */
+  padding: 15px 20px;
+  border-radius: 5px;
+  margin-bottom: 18px;
   cursor: pointer;
-}
-
-
-@media only screen and (max-width: 768px) {
-  .topping-price-box{
-
-    font-size: 13px;
-    padding: 9px 5px;
-
-  }
+  transition: background-color 0.3s, color 0.3s;
+  font-weight: bold;
   
 }
 
 
 
-
-
-
-.toppingPriceContainer {
-  width: 100%;
-  padding: 8px 0px;
-  margin: 2px 0px;
+.option.selected {
+  background-color: #7fff7f;
+  color: #fff; /* Color de texto en opciones seleccionadas */
 }
 
-
-
-.topping-price-box {
-  background-color: #fa2600;
-  width: 100%;
-  font-size: 13px;
-  text-align: center;
-  color: white;
-  border-radius: 8px;
-  padding: 10px 35px;
-  margin-top: 5px;
+.price {
+  color: #555;
+  font-size: 17px;
 }
-
-
-
-@media only screen and (max-width: 768px) {
-  .topping-price-box {
-
-    font-size: 12px;
-    padding: 9px 15px;
-
-  }
-  
-}
-
-
-/* Selected styles */
-.topping-rectangle.selected {
-  background-color: #45e35d;
-  color: black;
-}
-
-
 
 /* Special Instructions Section */
 .special-instructions-section {
@@ -766,27 +764,26 @@ textarea {
   align-items: center;
   justify-content: center;
   margin-top: 15px;
-  border-top: 2px solid rgba(0, 0, 0, 0.1); /* Línea divisoria semitransparente en la parte superior */
-  border-bottom: 2px solid rgba(0, 0, 0, 0.1); /* Línea divisoria semitransparente en la parte inferior */
   padding-top: 25px; /* Espacio opcional para separar la línea superior del texto */
   padding-bottom: 25px; /* Espacio opcional para separar la línea inferior del texto */
 }
 
 .quantity-label {
-  
   font-weight: bold;
   font-size: 20px;
   margin-right: 10px;
 }
 
 .quantity-icons {
-  padding: 0px 20px;
-
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+  padding: 0px 12px;
   cursor: pointer;
   font-size: 22px;
 }
 
 #quantity {
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+  padding: 2px 20px;
   font-size: 18px;
   font-weight: bold;
 }
@@ -805,15 +802,31 @@ textarea {
   align-items: center;
 }
 
+
+
+
+
+
 button {
+  font-weight: bold;
   font-size: 22px;
   background-color: #FB7306;
   color: white;
-  padding: 10px 75px;
+  padding: 25px 125px;
   border: 2px solid #FCEF7C;
   border-radius: 10px;
   cursor: pointer;
   margin-top: 10px;
+}
+
+
+@media only screen and (max-width: 768px) {
+
+  button {
+    font-size: 22px;
+    padding: 25px 100px;
+  }
+  
 }
 
 .total-price {
@@ -859,11 +872,25 @@ button {
 
 #mainImage {
   width: 100%;
-  max-height: 372px;
-  max-width: auto;
+  max-height: auto;
+  max-width: 70%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  cursor: zoom-in; /* Cambiar el cursor */
+  transition: transform 0.2s; /* Transición suave */
   /* Ajusta la imagen dentro del contenedor sin deformarse ni recortarse */
+}
+
+
+@media only screen and (max-width: 768px) {
+  #mainImage {
+    width: 100%;
+    max-height: auto;
+    max-width: 95%;
+    height: 100%;
+    object-fit: contain;
+  }
+  
 }
 
 
