--- a/menu/uplifted-bistro-order-page/uplifted-bistro-menu.css
+++ b/menu/uplifted-bistro-order-page/uplifted-bistro-menu.css
@@ -923,3 +923,81 @@ button {
 .thumbnail img:hover {
   border-color: #007bff;
 }
+
+
+/* Estilo para las pestañas */
+.tab-container {
+  display: flex;
+}
+
+.tab-btn {
+  background-color: #f4f4f4;
+  color: #333;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  font-size: 16px;
+}
+
+.tab-btn.active {
+  background-color: #ccc;
+}
+
+/* Estilo para el contenido de las pestañas */
+.tab-content {
+  display: none;
+
+  border-top: none;
+}
+
+.tab-content.active {
+  display: block;
+}
+
+
+.review-section {
+  margin-top: 20px;
+}
+
+.review {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 15px;
+  margin-bottom: 15px;
+}
+
+.reviewer-info {
+  display: flex;
+  align-items: center;
+}
+
+.reviewer-info img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.reviewer-details h3 {
+  margin: 0;
+  font-size: 18px;
+}
+
+.review-date {
+  color: #777;
+}
+
+.review-content {
+  margin-top: 10px;
+}
+
+.rating {
+  color: orange;
+  font-size: 20px;
+}
+
+.rating .star {
+  margin-right: 5px;
+}
