updates on style

--- a/menu/uplifted-bistro-order-page/uplifted-bistro-menu.css
+++ b/menu/uplifted-bistro-order-page/uplifted-bistro-menu.css
@@ -735,7 +735,7 @@ body {
 
 
 .option.selected {
-  background-color: #7fff7f;
+  background-color: #30b521;
   color: #fff; /* Color de texto en opciones seleccionadas */
 }
 
