para el gfecito

--- a/pages/catering-main-page.css
+++ b/pages/catering-main-page.css
@@ -473,7 +473,7 @@ body {
   font-weight: bold;
   text-align: center;
   color: #fff; /* White color for the name */
-  background-color: #a07f5a; /* Orange background for the name */
+  background-color: #FB7306; /* Orange background for the name */
   padding: 5px;
   border-radius: 0 0 0 0;
 }
