--- a/menu/uplifted-bistro-order-page/uplifted-bistro-catering-menu.css
+++ b/menu/uplifted-bistro-order-page/uplifted-bistro-catering-menu.css
@@ -184,22 +184,19 @@ body {
 
 
 .restaurantCovers {
-
   text-align: center;
   opacity: 0;
   transform: translateY(20px);
   animation: fadeInUp 1s ease-out 0.5s forwards;
   border-radius: 5px;
-  height: 392px;
+  height: 412px;
   margin-top: 22px;
   margin-bottom: 2px;
   background-image: url('/menu/uplifted-bistro-order-page/restaurantCover.jpg'); /* Replace 'path_to_your_image.jpg' with the path to your image */
   background-size: cover; /* Adjusts the background image to cover the entire element */
   background-position: center; /* Centers the background image */
   color: white;
-  -webkit-text-stroke: 2px rgba(0, 0, 0, 0.69); /* Contorno de 1px de grosor en color negro */
-  text-stroke: 1px black;
-  color: white; /* Color del texto */
+
 }
 
 
@@ -209,8 +206,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-
+  margin-top: 20px;
 }
+
 
 .backBtnContainer {
   display: flex;
@@ -218,12 +216,12 @@ body {
   padding: 18px 0px;
 }
 
+
 .btn-back {
   background-color: #0000005f;
   padding: 15px 20px;
   color: #ffffff;
-  text-shadow: none;
-  text-stroke: none;
+
 
 }
 
@@ -231,13 +229,15 @@ body {
 
 .nameCover {
   margin-top: 55px;
-  font-size: 50px;
+  font-size: 60px;
   font-weight: bold;
   display: flex;
   flex-direction: column;
   align-items: center; /* Align items vertically in the middle */
   justify-content: center; /* Align items horizontally in the middle */
   height: 152px;
+  -webkit-text-stroke: 2px rgb(0, 0, 0); /* Contorno de 1px de grosor en color negro */
+  text-stroke: 1px black;
 }
 
 .descriptionCover {
@@ -246,24 +246,26 @@ body {
   align-items: center; /* Align items vertically in the middle */
   justify-content: center; /* Align items horizontally in the middle */
   width: 92%;
-  font-size: 22px;
+  font-size: 28px;
   font-weight: 600;
-  -webkit-text-stroke: 1px rgba(0, 0, 0, 0.457); /* Contorno de 1px de grosor en color negro */
   color: rgb(255, 255, 255); /* Color del texto */
   margin-bottom: 2px;
+  -webkit-text-stroke: 1px rgba(24, 24, 24, 0.857); /* Contorno de 1px de grosor en color negro */
+  text-stroke: 1px black;
 }
 
 
 /* Media query for smaller screens (e.g., mobile) */
 @media only screen and (max-width: 767px) {
   .nameCover{
-    margin-top: 65px;
+    margin-top: 85px;
     height: 135px;
-    font-size: 35px;
+    font-size: 45px;
   }
 
   .descriptionCover {
     margin-bottom: 55px;
+    font-size: 22px;
   }
 }
 
